...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="azh-vt-e0K">
                                <rect key="frame" x="172" y="85" width="31" height="30"/>
                                <state key="normal" title="闭包"/>
                                <connections>
                                    <action selector="blockButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="QCf-Yz-Rrn"/>
                                    <segue destination="7pi-Au-kxf" kind="show" id="f8L-NK-Wjc"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F8D-m0-34y">
...
                    <view key="view" contentMode="scaleToFill" id="NZ7-Jq-d0d">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sMr-rx-GMb">
                                <rect key="frame" x="100" y="164" width="175" height="30"/>
                                <state key="normal" title="Go secondViewController"/>
                                <connections>
                                    <action selector="goSecondViewBtnPressed:" destination="7pi-Au-kxf" eventType="touchUpInside" id="gvG-HR-Qpv"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="显示second中输入的值" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lah-l8-JF8">
                                <rect key="frame" x="98.5" y="114" width="178" height="21"/>
...
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NC3-ky-B5l">
                                <rect key="frame" x="170.5" y="150" width="34" height="30"/>
                                <state key="normal" title="Back"/>
                                <connections>
                                    <action selector="backButtonPressed:" destination="3q5-5d-3C3" eventType="touchUpInside" id="4rf-0w-Ej8"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
